# internal/api/handlers/purchase_tickets.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"encoding/json"
+	"log"
 	"net/http"
 
 	"github.com/go-chi/render"
@@ -16,12 +17,20 @@ func (h *Handler) PurchaseTickets(w http.ResponseWriter, r *http.Request, id int
 
 	if err := decoder.Decode(&requestBody); err != nil {
 		api.RenderHTTPError(http.StatusBadRequest, api.BadRequestError(), r, w)
+		log.Printf("invalid request body %+v\n", requestBody)
 		return
 	}
 
-	err := h.ticketsService.PurchaseTickets(r.Context(), *requestBody.Quantity, id)
+	if requestBody.Quantity <= 0 || requestBody.UserId == "" {
+		api.RenderHTTPError(http.StatusBadRequest, api.BadRequestError(), r, w)
+		log.Printf("request is not valid %+v\n", requestBody)
+		return
+	}
+
+	err := h.ticketsService.PurchaseTickets(r.Context(), requestBody.Quantity, id)
 	if err != nil {
 		api.RenderHTTPError(http.StatusBadRequest, api.BadRequestError(), r, w)
+		log.Printf("could not purchase any tickets. %s\n", err.Error())
 		return
 	}
 
