# internal/api/server/openapi/openapi.yml
@@ -14,19 +14,13 @@ paths:
         $ref: '#/components/requestBodies/CreateTicketsRequestBody'
       responses:
         '201':
-          description: OK
+          description: Created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/TicketResponse'
         '400':
           description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: Server error
           content:
             application/json:
               schema:
@@ -49,14 +43,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TicketResponse'
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: Server error
+        '404':
+          description: Not found
           content:
             application/json:
               schema:
@@ -79,12 +67,6 @@ paths:
           description: OK
         '400':
           description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        '500':
-          description: Server error
           content:
             application/json:
               schema:
@@ -156,5 +138,5 @@ components:
               user_id:
                 type: string
             required:
-              - name
+              - quantity
               - user_id
